# vrx

./: .gitignore  README.md  catkin_make.sh  docker_join.sh  docker_run.sh  environment.sh  rdpg_multi.pkl  start_vrx.sh
Docker/: Dockerfile  Dockerfile_fail
catkin_ws/src/control/: CMakeLists.txt  package.xml
catkin_ws/src/control/cfg/: ang_PID.cfg  dis_PID.cfg
catkin_ws/src/duckiepond_vehicle/launch/: display.launch  gazebo.launch
catkin_ws/src/duckiepond_vehicle/mesh/: boxlink.STL  cameralink.STL  gpslink.STL  propulsion2link.STL  propulsion4link.STL  ringlink.STL  skiplatelink.STL
catkin_ws/src/duckiepond_vehicle/msg/: UsvDrive.msg
catkin_ws/src/duckiepond_vehicle/urdf/: duckieboat_new.urdf  duckieboat_new.xacro  engine.xacro  gazebo_thruster_config.xacro  lidar.xacro  usv_gazebo_camera_plugin.xacro  usv_gazebo_dynamics_plugin.xacro  usv_gazebo_imu_plugin.xacro  wamv_3d_lidar.xacro  watchtower.xacro  watchtower_base.xacro
catkin_ws/src/hrvo/: CMakeLists.txt  package.xml
catkin_ws/src/hrvo/launch/: multi_hrvo.launch  single_hrvo.launch
catkin_ws/src/hrvo/src/: HRVO.ipynb  RVO.py  demo_node.py  example.py  example_single.py  gym_env.py  hrvo.pkl  project_single.py  test.py  vis.py
catkin_ws/src/rl_navigation/: CMakeLists.txt  package.xml
catkin_ws/src/rl_navigation/launch/: ddpg.launch  dqn.launch  rdpg.launch  (+7 more)
docker/: Dockerfile  build.sh
procman/: start_vrx
rviz/: single_boat.rviz
vrx_ws/src/control/: CMakeLists.txt  package.xml
vrx_ws/src/duckiepond_vehicle/: CMakeLists.txt  package.xml
vrx_ws/src/duckiepond_vehicle/mesh/: antenalink.STL  baselink.STL  screwlink.STL  skillink.STL
vrx_ws/src/duckiepond_vehicle/urdf/: apriltag.xacro  apriltag_base.xacro  duckieboat.xacro  duckieboat_base.xacro  duckieboat_base_new.xacro  duckieboat_new.xacro  gazebo_thruster_config.xacro  usv_gazebo_apriltags_plugin.xacro  usv_gazebo_gps_plugin.xacro  usv_gazebo_lidar_plugin.xacro  usv_gazebo_p3d_plugin.xacro  usv_gazebo_thrust_plugin.xacro
vrx_ws/src/rl_navigation/: CMakeLists.txt
vrx_ws/src/subt_rl/: CMakeLists.txt  package.xml
vrx_ws/src/vrx/: .hgtags
(+1195 files in other folders)
