<?xml version="1.0"?>
<package format="2">
  <name>duckiepond_vehicle</name>
  <version>0.0.0</version>
  <description>The duckiepond_vehicle package</description>

  <maintainer email="tonycar12002@gmail.com">tony</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cmake_modules</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>message_generation</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>

  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_media_path="${prefix}/media"/> 

  </export>
</package>
